--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "XL Food — доставка еды по Красноярску",
   "main": "index.js",
   "dependencies": {
-    "@admin-bro/express": "^3.1.0",
-    "@admin-bro/mongoose": "^1.1.0",
-    "@admin-bro/upload": "^1.3.1",
-    "admin-bro": "^4.0.1",
+    "@adminjs/express": "^4.0.0",
+    "@adminjs/mongoose": "^2.0.0",
+    "@adminjs/upload": "^2.0.1",
+    "adminjs": "^5.1.0",
     "argon2": "^0.28.2",
     "concurrently": "^6.2.0",
     "connect-mongo": "^4.4.1",
