--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 PORT = port to be used for production
-AWSURI
-AWSRegion
-AWSBucket
-AWSSecretAccessKey
-AWSAccessKeyID
+MONGO_URI
+AWS_URI
+AWS_REGION
+AWS_BUCKET
+AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY
 MAIL_LOGIN = example@example.com
 MAIL_PASSWORD = qwerty
