--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
+    "immer": "^9.0.5",
     "node-sass": "^6.0.1",
     "normalize-css": "^2.3.1",
     "react": "^17.0.2",
@@ -16,6 +17,7 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
