--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "immer": "^9.0.5",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "normalize-css": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
