--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.2.9",
     "immer": "^9.0.5",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^6.0.1",
     "normalize-css": "^2.3.1",
     "react": "^17.0.2",
