--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "normalize-css": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
