--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "mongoose": "^6.0.4"
+    "mongoose": "^6.0.4",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
     "express-formidable": "^1.2.0",
