--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "use-debounce": "^7.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
