--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-text-mask": "^5.4.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
