--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.28.1",
     "react-text-mask": "^5.4.3",
     "react-transition-group": "^4.4.2",
+    "react-youtube": "^7.13.1",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
